ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: piashowcase-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: piashowcase.local
    http:
      paths:
      - path: /orders
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 5003
      - path: /products
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 5002
